diesel_compile_tests/tests/fail/join_with_explicit_on_requires_valid_boolean_expression.stderr
error[E0271]: type mismatch resolving `<Join<table, table, Inner> as AppearsInFromClause<table>>::Count == Once`
  --> tests/fail/join_with_explicit_on_requires_valid_boolean_expression.rs:31:26
   |
31 |     let _ = users::table.inner_join(posts::table.on(users::id.eq(comments::id)));
   |                          ^^^^^^^^^^ expected `Never`, found `Once`
   |
note: required for `comments::columns::id` to implement `AppearsOnTable<query_source::joins::Join<users::table, posts::table, Inner>>`
  --> tests/fail/join_with_explicit_on_requires_valid_boolean_expression.rs:19:9
   |
19 |         id -> Integer,
   |         ^^
   = note: associated types for the current `impl` cannot be restricted in `where` clauses
   = note: 2 redundant requirements hidden
   = note: required for `diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<users::columns::id, comments::columns::id>>` to implement `AppearsOnTable<query_source::joins::Join<users::table, posts::table, Inner>>`
   = note: required for `JoinOn<Join<table, table, Inner>, Grouped<Eq<id, id>>>` to implement `QuerySource`
   = note: required for `SelectStatement<FromClause<users::table>>` to implement `InternalJoinDsl<posts::table, Inner, diesel::expression::grouped::Grouped<diesel::expression::operators::Eq<users::columns::id, comments::columns::id>>>`
   = note: consider using `--verbose` to print the full type name to the console

error[E0277]: `diesel::sql_types::Integer` is neither `diesel::sql_types::Bool` nor `diesel::sql_types::Nullable<Bool>`
  --> tests/fail/join_with_explicit_on_requires_valid_boolean_expression.rs:33:37
   |
33 |     let _ = users::table.inner_join(posts::table.on(users::id));
   |                          ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `BoolOrNullableBool` is not implemented for `diesel::sql_types::Integer`, which is required by `users::table: JoinWithImplicitOnClause<_, Inner>`
   |                          |
   |                          required by a bound introduced by this call
   |
   = note: try to provide an expression that produces one of the expected sql types
   = help: the following other types implement trait `BoolOrNullableBool`:
             Bool
             Nullable<Bool>
   = note: required for `JoinOn<query_source::joins::Join<users::table, posts::table, Inner>, users::columns::id>` to implement `QuerySource`
   = note: required for `SelectStatement<FromClause<users::table>>` to implement `InternalJoinDsl<posts::table, Inner, users::columns::id>`
   = note: 1 redundant requirement hidden
   = note: required for `users::table` to implement `InternalJoinDsl<posts::table, Inner, users::columns::id>`
   = note: required for `users::table` to implement `JoinWithImplicitOnClause<query_source::joins::OnClauseWrapper<posts::table, users::columns::id>, Inner>`
note: required by a bound in `inner_join`
  --> $DIESEL/src/query_dsl/mod.rs
   |
   |     fn inner_join<Rhs>(self, rhs: Rhs) -> InnerJoin<Self, Rhs>
   |        ---------- required by a bound in this associated function
   |     where
   |         Self: JoinWithImplicitOnClause<Rhs, joins::Inner>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `QueryDsl::inner_join`
